[gd_scene load_steps=9 format=3 uid="uid://bqs342jetviw1"]

[ext_resource type="Script" uid="uid://b2evw33w7jkx1" path="res://Scripts/Characters/zombie.gd" id="1_7imdt"]
[ext_resource type="Script" uid="uid://562jwjog0doo" path="res://Scripts/Components/health_manager.gd" id="1_76wvq"]
[ext_resource type="Texture2D" uid="uid://dch1eht0htluj" path="res://Sprites/Zombies/Zombie_Dead.png" id="2_7imdt"]
[ext_resource type="Texture2D" uid="uid://du63vlepcglpg" path="res://Sprites/Zombies/Zombie.png" id="3_1nloi"]
[ext_resource type="PackedScene" uid="uid://egfnxvqvsv3x" path="res://Prefabs/Effects/blood_particle.tscn" id="3_lhn4e"]
[ext_resource type="Script" uid="uid://bbe5uiuoyw305" path="res://Scripts/Components/vision_manager.gd" id="6_lhn4e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_76wvq"]
radius = 18.027756

[sub_resource type="SpriteFrames" id="SpriteFrames_lhn4e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7imdt")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1nloi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Zombie" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 5
motion_mode = 1
script = ExtResource("1_7imdt")
player_position_always_known = true

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("1_76wvq")
blood_burst = ExtResource("3_lhn4e")
blood_small = ExtResource("3_lhn4e")
metadata/_custom_type_script = "uid://562jwjog0doo"

[node name="RayCast2D" type="RayCast2D" parent="HealthComponent"]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_76wvq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_lhn4e")
autoplay = "default"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="VisionManager" type="Node2D" parent="."]
script = ExtResource("6_lhn4e")
metadata/_custom_type_script = "uid://bbe5uiuoyw305"

[node name="RayCast2D" type="RayCast2D" parent="VisionManager"]

[connection signal="timeout" from="Timer" to="." method="update_ai"]
